<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:padding="10dp"
        android:id="@+id/textView4"
        android:layout_width="345dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="23dp"
        android:text="@string/layout2_textview_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="303dp"
        android:layout_height="149dp"
        android:layout_marginBottom="179dp"
        android:stretchColumns="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.501">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:background="@drawable/textview_border"
                android:padding="5dp"

                android:text="@string/layout4_cell_item_cell1"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/layout4_cell_item_cell3"
                android:textSize="26dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/layout4_cell_item_cell3"

                android:textSize="26dp" />

            <TextView
                android:id="@+id/textView13"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/layout4_cell_item_cell4"

                android:textSize="26dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/layout4_cell_item_cell5"

                android:textSize="26dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/layout4_cell_item_cell6"

                android:textSize="26dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/layout4_cell_item_cell7"

                android:textSize="26dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/layout4_cell_item_cell8"

                android:textSize="26dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/layout4_cell_item_cell9"

                android:textSize="26dp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>